# LiarsPoker

./: .gitignore  LiarsPoker.cabal  Procfile  README.md  api.js  stack.yaml
Backend/: LiarsPoker.cabal
Backend/app/: Main.hs
Backend/src/: LiarsPoker.hs  Main.hs  Types.hs  WSapi.hs
Frontend/: elm-package.json  package.json  test.html  webpack.config.js
Frontend/src/: GameInfo.elm  GamePlay.elm  LiarsPoker.elm  Main.elm  Model.elm  PlayerList.elm  SignIn.elm  Types.elm  Update.elm  View.elm  index.html  index.js
Frontend/src/LiarsPoker/: GameInfo.elm  GamePlay.elm  Model.elm  Player.elm  PlayerList.elm  Types.elm  Update.elm  View.elm
Frontend/src/LiarsPoker/Views/: SignIn.elm
app/: Main.hs
client/: Main.hs
client-hs/: client.hs
client-js/: JQuery.hs
src/: LiarsPoker.hs  WSapi.hs  WebAPI.hs
static/: app.js  client.html  client.js  index.html  style.css
static-old/: app.js  index.html  style.css
ws/: Main.hs
