name:                LiarsPoker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/LiarsPoker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiarsPoker
                     , WebAPI
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.6
                     , lens
                     , MonadRandom >= 0.4 && < 0.5
                     , random >= 1.1 && < 1.2
                     , split >= 0.2.1 && < 0.3
                     , servant >= 0.4 && < 0.5
                     , servant-server >= 0.4 && < 0.5
                     , wai >= 3.2 && < 3.3
                     , aeson >= 0.9 && < 0.12
                     , transformers >= 0.4 && < 0.5
  default-language:    Haskell2010

executable LPserve
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LiarsPoker
                     , warp >= 3.2 && < 3.3
  default-language:    Haskell2010

executable LPclient-hs
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LiarsPoker
                     , servant >= 0.4 && < 0.5
                     , servant-client >= 0.4 && < 0.5
                     , aeson >= 0.9 && < 0.12
                     , either >= 4.4 && < 4.5
  default-language:    Haskell2010

test-suite LiarsPoker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LiarsPoker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LiarsPoker
