name:                LiarsPoker
version:             0.1.0.0
synopsis:            Liaars Poker web app.
description:         Please see README.md
homepage:            http://github.com/githubuser/LiarsPoker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiarsPoker
                     , WSapi
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , lens
                     , MonadRandom >= 0.4 && < 0.5
                     , random >= 1.1 && < 1.2
                     , split >= 0.2.1 && < 0.3
                     , wai >= 3.2 && < 3.3
                     , websockets
                     , wai-websockets
                     , wai-app-static
                     , warp >= 3.2 && < 3.3
                     , aeson >= 0.9 && < 0.12
                     , transformers >= 0.4 && < 0.5
                     , file-embed
                     , text >=1.2 && <1.3
  default-language:    Haskell2010

executable Serve
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LiarsPoker
                     , warp >= 3.2 && < 3.3
                     , wai-websockets
                     , websockets
                     , random >= 1.1 && < 1.2

  default-language:    Haskell2010

test-suite LiarsPoker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LiarsPoker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LiarsPoker
