name:                LiarsPoker
version:             0.1.0.0
synopsis:            Liaars Poker Websockets server.
description:         Please see README.md
homepage:            http://github.com/jeffreyrosenbluth/LiarsPoker.git
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
copyright:           2016 Jeffrey Rosenbluth
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Serve
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       LiarsPoker
                     , Types
                     , WSapi
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , lens
                     , MonadRandom >= 0.4 && < 0.5
                     , random >= 1.1 && < 1.2
                     , split >= 0.2.1 && < 0.3
                     , wai >= 3.2 && < 3.3
                     , websockets
                     , wai-websockets
                     , wai-app-static
                     , warp >= 3.2 && < 3.3
                     , aeson >= 0.9 && < 0.12
                     , transformers >= 0.4 && < 0.5
                     , file-embed
                     , text >=1.2 && < 1.3
                     , vector >= 0.11 && < 0.12

  default-language:    Haskell2010

test-suite LiarsPoker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LiarsPoker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeffreyrosenbluth/LiarsPoker.git
